# nite_fx

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  nite_fx_path.h.in
data/: openni_tracker.xml
data/video_backgrounds/: news.m4v  urls.txt
src/: CMakeLists.txt  NiteSkeletonLite.h  StringUtils.h  color_utils.h  combinatorics_utils.h  comp_labeller_interface.h  cv_conversion_float_uchar.h  disjoint_sets2.cpp  distances.h  drawing_utils.h  geometry_utils.h  hausdorff_distances.h  layer_utils.h  ltm_path.h  nite_fx.cpp  nite_primitive.h  rect_utils.h  resize_utils.h  skeleton_utils.h  std_utils.h  timer.h  titlemaps.h  value_remover.h
src/dancer/: CMakeLists.txt  background_remover.h  blur.h  calibrator.h  clone_user.h  compute_user_accelerations.h  copy_color_to_out.h  copy_color_to_out_and_user_edge.h  copy_depth_to_out.h  copy_user_to_out.h  depth_background_remover.h  effect_collection.cpp  effect_collection.h  effect_collection_nite_fx.cpp  effect_interface.h  equalize_color_to_out.h  get_depth_blobs.h  helices.h  hue_to_out.h  keep_only_user_color_background.h  keep_only_user_video_background.h  make_effect.bash  nite_effect_collection_standalone.cpp  nite_fx.cpp  particle_thrower.h  remove_user_inpaint.h  remove_user_inpaint_scale.h  remove_user_quick_fill.h  set_user_to_black.h
